--- a/app/src/main/res/layout/review_adapter.xml
+++ b/app/src/main/res/layout/review_adapter.xml
@@ -1,24 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
+        <import type="android.view.View" />
+
+        <variable
+            name="review"
+            type="com.transport.mall.model.ReviewModel" />
+
+        <variable
+            name="hideReplyButtons"
+            type="Boolean" />
     </data>
 
     <LinearLayout
+        android:id="@+id/parentItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_10sdp"
+        android:background="@drawable/default_btn_selector"
         android:orientation="horizontal"
-        android:paddingTop="@dimen/_10sdp"
-        android:paddingBottom="@dimen/_10sdp">
+        android:paddingStart="@dimen/_10sdp"
+        android:paddingTop="@dimen/_10sdp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
             android:layout_gravity="top"
             android:layout_marginLeft="@dimen/_2sdp"
-            android:background="@drawable/ic_profile_pic_placeholder" />
+            android:background="@drawable/ic_user_placeholder" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -46,10 +57,10 @@
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvTimeAgo"
+                    timeAgo="@{review.createdAt}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:text="2 days ago"
                     android:textColor="@color/grey_light"
                     android:textSize="14sp"
                     android:theme="@style/openRegularTextStyle" />
@@ -67,7 +78,7 @@
                     style="?android:attr/ratingBarStyleSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:rating="2" />
+                    android:rating="@{review.rating}" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvRating"
@@ -75,7 +86,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:orientation="vertical"
-                    android:text="0"
+                    android:text="@{ratingBar.rating+``}"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_10ssp"
                     android:theme="@style/openRegularTextStyle" />
@@ -88,11 +99,12 @@
                 android:layout_marginLeft="@dimen/_5sdp"
                 android:orientation="vertical"
                 android:padding="@dimen/_1sdp"
-                android:text="Great place to eat sleep and rest at any time"
+                android:text="@{review.review}"
                 android:textColor="@color/black"
                 android:textSize="13sp"
                 android:textStyle="italic"
-                android:theme="@style/openSemiBoldTextStyle" />
+                android:theme="@style/openSemiBoldTextStyle"
+                tools:text="Test Review" />
 
 
             <LinearLayout
@@ -120,6 +132,59 @@
                     android:layout_height="match_parent"
                     android:layout_margin="@dimen/_2sdp"
                     android:layout_weight="1" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:orientation="horizontal"
+                android:visibility="@{hideReplyButtons ? View.GONE : View.VISIBLE}"
+                android:weightSum="3">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/default_btn_selector"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:padding="@dimen/_5sdp"
+                    android:text="View Replies"
+                    android:textColor="@color/colorPrimary" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/grey_divider_theme" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/default_btn_selector"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:gravity="center"
+                    android:padding="@dimen/_5sdp"
+                    android:text="Report"
+                    android:textColor="@color/colorPrimary" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/grey_divider_theme" />
+
+                <TextView
+                    android:id="@+id/tvReply"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/default_btn_selector"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:gravity="right"
+                    android:padding="@dimen/_5sdp"
+                    android:text="Reply"
+                    android:textColor="@color/colorPrimary" />
 
             </LinearLayout>
 
