--- a/app/src/main/res/layout/activity_add_review.xml
+++ b/app/src/main/res/layout/activity_add_review.xml
@@ -50,7 +50,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_10sdp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <RatingBar
                     android:id="@+id/rb_rating"
@@ -60,9 +61,9 @@
                     android:isIndicator="false"
                     android:max="5"
                     android:numStars="5"
-                    android:progressDrawable="@drawable/ratingbar_full"
-                    android:rating="0"
-                    android:stepSize="0.5" />
+                    android:rating="3"
+                    android:stepSize="0.5"
+                    android:theme="@style/RatingBar" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvRating"
@@ -77,7 +78,6 @@
                     android:theme="@style/openRegularTextStyle" />
             </LinearLayout>
 
-
             <EditText
                 android:id="@+id/edSearch"
                 style="@style/openRegularTextStyle"
@@ -89,11 +89,11 @@
                 android:gravity="top"
                 android:hint="@string/your_reply"
                 android:maxLines="6"
-                android:padding="@dimen/_5sdp"
+                android:padding="@dimen/_10sdp"
                 android:text="@={viewModel.reviewModel.review}"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
-                android:textSize="@dimen/_13ssp" />
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:id="@+id/llUploadImg"
