--- a/app/src/main/res/layout/review_adapter.xml
+++ b/app/src/main/res/layout/review_adapter.xml
@@ -7,6 +7,10 @@
         <import type="android.view.View" />
 
         <variable
+            name="loggedInUser"
+            type="com.transport.mall.model.UserModel" />
+
+        <variable
             name="review"
             type="com.transport.mall.model.ReviewModel" />
 
@@ -52,7 +56,7 @@
                     android:layout_alignParentLeft="true"
                     android:text="Raman Dhaba"
                     android:textColor="@color/black"
-                    android:textSize="15sp"
+                    android:textSize="16sp"
                     android:theme="@style/openBoldTextStyle" />
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -78,7 +82,9 @@
                     style="?android:attr/ratingBarStyleSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:rating="@{review.rating}" />
+                    android:rating="@{review.rating}"
+                    android:theme="@style/RatingBar"
+                    tools:rating="3" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvRating"
@@ -101,7 +107,7 @@
                 android:padding="@dimen/_1sdp"
                 android:text="@{review.review}"
                 android:textColor="@color/black"
-                android:textSize="13sp"
+                android:textSize="14sp"
                 android:textStyle="italic"
                 android:theme="@style/openSemiBoldTextStyle"
                 tools:text="Test Review" />
@@ -138,9 +144,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="right"
                 android:layout_marginTop="@dimen/_10sdp"
+                android:gravity="right"
                 android:orientation="horizontal"
-                android:visibility="@{hideReplyButtons ? View.GONE : View.VISIBLE}"
+                android:visibility="@{(hideReplyButtons || !review.comment.trim().empty)? View.GONE : View.VISIBLE}"
                 android:weightSum="3">
 
                 <TextView
@@ -151,12 +159,14 @@
                     android:fontFamily="@font/opensans_semibold"
                     android:padding="@dimen/_5sdp"
                     android:text="View Replies"
-                    android:textColor="@color/colorPrimary" />
+                    android:textColor="@color/colorPrimary"
+                    android:visibility="gone" />
 
                 <View
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/grey_divider_theme" />
+                    android:background="@color/grey_divider_theme"
+                    android:visibility="gone" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -172,7 +182,8 @@
                 <View
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/grey_divider_theme" />
+                    android:background="@color/grey_divider_theme"
+                    android:visibility="@{!loggedInUser.isExecutive() ? View.VISIBLE : View.GONE}" />
 
                 <TextView
                     android:id="@+id/tvReply"
@@ -184,7 +195,37 @@
                     android:gravity="right"
                     android:padding="@dimen/_5sdp"
                     android:text="Reply"
-                    android:textColor="@color/colorPrimary" />
+                    android:textColor="@color/colorPrimary"
+                    android:visibility="@{!loggedInUser.isExecutive() ? View.VISIBLE : View.GONE}" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:background="@drawable/grey_roundcorners_fofofo"
+                android:orientation="vertical"
+                android:padding="@dimen/_10sdp"
+                android:visibility="@{review.comment.trim().empty ? View.GONE : View.VISIBLE}">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text="@string/your_reply"
+                    android:textColor="@color/grey"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text="@{review.comment}"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    tools:text="Thank you so much for your words" />
 
             </LinearLayout>
 
