--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,8 @@
         <item name="android:spotShadowAlpha">0.2</item>
         <item name="android:statusBarColor">#00000000</item>
         <item name="android:windowActivityTransitions">true</item>
-        <item name="android:autofilledHighlight" tools:targetApi="o">@android:color/transparent</item>
+        <item name="android:autofilledHighlight" tools:targetApi="o">@android:color/transparent
+        </item>
     </style>
 
     <style name="DrawerArrowStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
@@ -129,6 +130,7 @@
         <item name="boxStrokeColor">@color/input_selector</item>
         <item name="boxStrokeWidth">0.6dp</item>
     </style>
+
     <style name="TILStyleRedHint" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="boxStrokeWidth">0.6dp</item>
         <item name="android:textColorHint">@color/text_gray_hint</item>
@@ -170,5 +172,10 @@
         <!-- Customize color of navigation drawer icon and back arrow -->
         <item name="colorControlNormal">@color/black</item>
         <item name="android:textColorSecondary">@color/white</item>
+    </style>
+
+    <style name="RatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">#BEBEBE</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
     </style>
 </resources>
