Rating and review - in progress

--- a/app/src/main/res/layout/review_adapter.xml
+++ b/app/src/main/res/layout/review_adapter.xml
@@ -169,6 +169,7 @@
                     android:visibility="gone" />
 
                 <TextView
+                    android:id="@+id/tvReport"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
