Rating and review - Done from app end

--- a/app/src/main/res/layout/activity_add_review.xml
+++ b/app/src/main/res/layout/activity_add_review.xml
@@ -16,6 +16,7 @@
     </data>
 
     <FrameLayout
+        android:id="@+id/flMain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
@@ -28,6 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:background="@color/white"
+            android:clickable="true"
             android:orientation="vertical">
 
 
@@ -43,7 +45,9 @@
 
             <include
                 layout="@layout/review_adapter"
-                app:review="@{reviewModel}" />
+                android:clickable="true"
+                app:review="@{reviewModel}"
+                app:showButtons="@{false}" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
